<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="16dp"
    tools:context=".StartingScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinLayActGroup1"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginRight="85dp"
            android:textStyle="italic"
            android:textSize="15dp" />

        <Button
            android:id="@+id/buttonGroupHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GroupHead"
            android:textStyle="italic"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout android:id="@+id/LinLayTestMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinLayActGroup1"
        android:gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_testExample"
            android:textSize="20dp"
            android:textStyle="normal"
            android:text="@string/TestType"/>

        <Spinner android:id="@+id/spinner_testExample"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@string/TestType" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_TextType"
            android:textSize="20dp"
            android:textStyle="normal"
            android:text="non"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/LinLayScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinLayTestMaterial"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_highscore"
            android:textSize="20dp"
            android:textStyle="normal"
            android:text="@string/HightScore"/>

        <TextView
            android:layout_height="wrap_content"
            android:id="@+id/text_view_hightScoreChange"
            android:textSize="22dp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:text=" 0 OF 60"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/LinLayAnswered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinLayScore"
        android:gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/textView_testAnswered"-->
            <!--android:textSize="20dp"-->
            <!--android:textStyle="normal"-->
            <!--android:text="@string/Answered"/>-->

        <Spinner
            android:id="@+id/spinner_Answered"
            android:layout_height="44dp"
            android:layout_width="wrap_content"
            android:entries="@array/Answered"
            android:layout_gravity="center"
            android:scrollbarSize="20dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="106dp"
            android:layout_height="44dp"
            android:text="Kategorijas"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_category2"
            android:layout_width="53dp"
            android:layout_height="44dp"
            android:scrollbarSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinLayVertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/LinLayAnswered">

        <TextView
            android:id="@+id/textViewNumberOfQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Jautājumu skaits: " />

        <Spinner
            android:id="@+id/spinner_NumberOfQuestion"
            android:layout_width="wrap_content"
            android:entries="@array/numberOfQuestion"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/button_start_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Start Quiz" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_start_quiz"
        android:layout_alignStart="@+id/LinLayScore"
        android:text="LogIn" />

    <Button
        android:id="@+id/buttonLogDebug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_start_quiz"
        android:layout_alignStart="@+id/LinLayScore"
        android:text="Debug" />

    <Button
        android:id="@+id/buttonMakeTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/LinLayActGroup1"
        android:layout_alignTop="@+id/button_start_quiz"
        android:text="M_Test" />

</RelativeLayout>


    <!--MyAwsome Quiz-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="30dp"-->
    <!--android:text="My Awesome Quiz"-->
    <!--android:textColor="@android:color/black"-->
    <!--android:textSize="35sp" />-->






























